--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "stokk",
+  "name": "brain",
   "version": "0.0.1",
   "description": "",
   "author": "Ry Scott",
   "scripts": {
     "start": "webpack --mode=development -w",
-    "dev": "webpack serve --open",
-    "server": "node server/index.js --w"
+    "build": "webpack --mode=production",
+    "dev": "webpack serve --open"
   },
   "dependencies": {
     "brain.js": "^2.0.0-beta.17",
     "chart.js": "^4.1.1",
     "chroma-js": "^2.4.2",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "dotenv-webpack": "^8.0.1",
-    "express": "^4.18.2",
-    "file-saver": "^2.0.5",
-    "fs": "^0.0.1-security",
-    "mongoose": "^6.8.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^18.2.0",
@@ -29,7 +23,6 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "axios": "^1.2.0",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "date-fns": "^2.29.3",
